Use valueOf()
- Make test class static